created separate divs for nav icons, starting on header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 <body>
 
     <div id="outer-grid">
-        <div id="header">header</div>
+        <div id="header">
+            <div id="search-bar">
+                <div id="bar">bar</div>
+                <div id="icon">icon</div>
+            </div>
+            <div id="user">user</div>
+            <div id="user-buttons">user-buttons</div>
+        </div>
         <div id="sidebar">
-            <div id="dashboard">dashboard</div>
+            <div id="dash-logo"></div>
+            <div id="nav-logo"></div>
+            <div id="settings-logo"></div>
+            <div id="dashboard">
+                <h3>Dashboard</h3>
+            </div>
             <div id="nav">
                 <ul>
                     <li>Home</li>
