created placeholder cards, and gridified everything, grids in grids in grids etc

--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
                 <div id="bar">bar</div>
                 <div id="icon">icon</div>
             </div>
-            <div id="user">user</div>
-            <div id="user-buttons">user-buttons</div>
+            <div id="user">
+                <div id="user-icon">user-icon</div>
+                <div id="greeting">greeting</div>
+                <div id="user-name">user-name</div>
+            </div>
+            <div id="user-buttons">
+                <div id="notif">notif</div>
+                <div id="name">name</div>
+                <div id="buttons">buttons</div>
+            </div>
         </div>
         <div id="sidebar">
             <div id="dash-logo"></div>
@@ -43,7 +51,29 @@
             </div>
         </div>
         <div id="main-content">
-            <div id="projects">projects</div>
+            <div id="projects">
+                <div id="your-projects">your-projects</div>
+                <div id="content-cards">
+                    <div class="cards">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </div>
+                    <div class="cards">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, fugit.
+                    </div>
+                    <div class="cards">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, eos.
+                    </div>
+                    <div class="cards">
+                        Lorem ipsum dolor sit amet consectetur.
+                    </div>
+                    <div class="cards">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, ipsa ipsum.
+                    </div>
+                    <div class="cards">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe similique accusantium.
+                    </div>
+                </div>
+            </div>
             <div id="announcements">announcements</div>
             <div id="trending">trending</div>
         </div>
