trying to figure out grid for main content

--- a/index.html
+++ b/index.html
@@ -55,26 +55,35 @@
                 <div id="your-projects">your-projects</div>
                 <div id="content-cards">
                     <div class="cards">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <h4>Super Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="cards">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, fugit.
+                        <h4>Less Cool Project</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, fugit.</p>
                     </div>
                     <div class="cards">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, eos.
+                        <h4>Impossible App</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, eos.</p>
                     </div>
                     <div class="cards">
-                        Lorem ipsum dolor sit amet consectetur.
+                        <h4>Easy Peasy App</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                     <div class="cards">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, ipsa ipsum.
+                        <h4>Ad Blocker</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, ipsa ipsum.</p>
                     </div>
                     <div class="cards">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe similique accusantium.
+                        <h4>Money Maker</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe similique accusantium.</p>
                     </div>
                 </div>
             </div>
-            <div id="announcements">announcements</div>
+            <div id="announcements">
+                <div id="anoun-title">Announcements</div>
+                <div id="anoun-text">anoun-text</div>
+            </div>
             <div id="trending">trending</div>
         </div>
     </div>
