--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
             </div>
             <div id="user-buttons">
                 <div id="notif">notif</div>
+                <div id="icon">icon</div>
                 <div id="name">name</div>
-                <div id="buttons">buttons</div>
+                <div id="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
         <div id="sidebar">
@@ -51,8 +56,8 @@
             </div>
         </div>
         <div id="main-content">
-            <div id="projects">
-                <div id="your-projects">your-projects</div>
+            <div id="projects-title">Your Projects</div>
+            <div id="projects-content">
                 <div id="content-cards">
                     <div class="cards">
                         <h4>Super Cool Project</h4>
@@ -80,11 +85,19 @@
                     </div>
                 </div>
             </div>
-            <div id="announcements">
-                <div id="anoun-title">Announcements</div>
-                <div id="anoun-text">anoun-text</div>
+            <div id="announ-title">Announcements</div>
+            <div id="announ-content">
+                <div>Site Maintenence</div>
+                <div>Community Share Day</div>
+                <div>Updated Privacy Policy</div>
             </div>
-            <div id="trending">trending</div>
+            <div id="trend-title">Trending</div>
+            <div id="trend-content">
+                <div>box 1</div>
+                <div>box 2</div>
+                <div>box 3</div>
+                <div>box 4</div>
+            </div>
         </div>
     </div>
 
