added singular icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </div>
         </div>
         <div id="sidebar">
-            <div id="dash-logo"></div>
+            <div id="dash-logo">
+                <img src="SVGs/view-dashboard.svg" alt="">
+            </div>
             <div id="nav-logo"></div>
             <div id="settings-logo"></div>
             <div id="dashboard">
