added nav logos

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
         </div>
         <div id="sidebar">
             <div id="dash-logo">
-                <img src="SVGs/view-dashboard.svg" alt="">
+                <img src="SVGs/view-dashboard.svg" alt="dashboard icon">
             </div>
-            <div id="nav-logo"></div>
+            <div id="nav-logo">
+                <img src="SVGs/home.svg" alt="homepage icon">
+                <img src="SVGs/card-account-details-outline.svg" alt="profile icon">
+                <img src="SVGs/message-reply.svg" alt="messages icon">
+                <img src="SVGs/clock-time-three-outline.svg" alt="history icon">
+                <img src="SVGs/note-multiple.svg" alt="tasks icon">
+                <img src="SVGs/account-group.svg" alt="communities icon">
+            </div>
+                
             <div id="settings-logo"></div>
             <div id="dashboard">
                 <h3>Dashboard</h3>
