--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
                 <img src="SVGs/view-dashboard.svg" alt="dashboard icon">
             </div>
             <div id="nav-logo">
-                <img src="SVGs/home.svg" alt="homepage icon">
-                <img src="SVGs/card-account-details-outline.svg" alt="profile icon">
-                <img src="SVGs/message-reply.svg" alt="messages icon">
-                <img src="SVGs/clock-time-three-outline.svg" alt="history icon">
-                <img src="SVGs/note-multiple.svg" alt="tasks icon">
-                <img src="SVGs/account-group.svg" alt="communities icon">
+                <img class="icon" src="SVGs/home.svg" alt="homepage icon">
+                <img class="icon" src="SVGs/card-account-details-outline.svg" alt="profile icon">
+                <img class="icon" src="SVGs/message-reply.svg" alt="messages icon">
+                <img class="icon" src="SVGs/clock-time-three-outline.svg" alt="history icon">
+                <img class="icon" src="SVGs/note-multiple.svg" alt="tasks icon">
+                <img class="icon" src="SVGs/account-group.svg" alt="communities icon">
             </div>
                 
-            <div id="settings-logo"></div>
+            <div id="settings-logo">
+                <img class="icon" src="SVGs/cog.svg" alt="setting icon">
+                <img class="icon" src="SVGs/help-box.svg" alt="support icon">
+                <img class="icon" src="SVGs/shield-check.svg" alt="privacy icon">
+            </div>
             <div id="dashboard">
                 <h3>Dashboard</h3>
             </div>
