--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
     <div id="outer-grid">
         <div id="header">
             <div id="search-bar">
-                <div id="bar">bar</div>
+                <div id="bar">
+                    <img class="icon" src="SVGs/magnify.svg" alt="search icon">
+                </div>
                 <div id="icon">icon</div>
             </div>
             <div id="user">
                 <div id="user-icon">user-icon</div>
-                <div id="greeting">greeting</div>
-                <div id="user-name">user-name</div>
+                <div id="greeting">Hi there,</div>
+                <div id="user-name">Morgan Oakley (@morgan)</div>
             </div>
             <div id="user-buttons">
-                <div id="notif">notif</div>
+                <div id="notif">
+                    <img class="icon" src="SVGs/bell-ring-outline.svg" alt="notification icon">
+                </div>
                 <div id="icon">icon</div>
-                <div id="name">name</div>
+                <div id="name">Morgan Oakley</div>
                 <div id="buttons">
                     <button>New</button>
                     <button>Upload</button>
@@ -101,16 +105,16 @@
             </div>
             <div id="announ-title">Announcements</div>
             <div id="announ-content">
-                <div>Site Maintenence</div>
-                <div>Community Share Day</div>
-                <div>Updated Privacy Policy</div>
+                <div class="announ-cards">Site Maintenence</div>
+                <div class="announ-cards">Community Share Day</div>
+                <div class="announ-cards">Updated Privacy Policy</div>
             </div>
             <div id="trend-title">Trending</div>
             <div id="trend-content">
-                <div>box 1</div>
-                <div>box 2</div>
-                <div>box 3</div>
-                <div>box 4</div>
+                <div class="trend-cards">box 1</div>
+                <div class="trend-cards">box 2</div>
+                <div class="trend-cards">box 3</div>
+                <div class="trend-cards">box 4</div>
             </div>
         </div>
     </div>
