added a profile pic

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
                 <div id="bar">
                     <img class="icon" src="SVGs/magnify.svg" alt="search icon">
                 </div>
-                <div id="icon">icon</div>
+                <div id="icon">
+                    <div id="bar-shape"></div>
+                </div>
             </div>
             <div id="user">
-                <div id="user-icon">user-icon</div>
+                <div id="user-icon">
+                    <img class="profile-icon" id="morgan" src="SVGs/cat.svg" alt="cat pic">
+                </div>
                 <div id="greeting">Hi there,</div>
                 <div id="user-name">Morgan Oakley (@morgan)</div>
             </div>
@@ -25,7 +29,9 @@
                 <div id="notif">
                     <img class="icon" src="SVGs/bell-ring-outline.svg" alt="notification icon">
                 </div>
-                <div id="icon">icon</div>
+                <div id="icon">
+                    <img class="profile-icon" id="user-morgan" src="SVGs/cat.svg" alt="cat pic">
+                </div>
                 <div id="name">Morgan Oakley</div>
                 <div id="buttons">
                     <button>New</button>
