added styling to announ/trend containers and text

--- a/index.html
+++ b/index.html
@@ -111,16 +111,29 @@
             </div>
             <div id="announ-title">Announcements</div>
             <div id="announ-content">
-                <div class="announ-cards">Site Maintenence</div>
-                <div class="announ-cards">Community Share Day</div>
-                <div class="announ-cards">Updated Privacy Policy</div>
+                <div class="announ-cont">
+                    <div class="announ-cards" id="cardOne">
+                        <h5>Site Maintenance</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sapiente commodi accusantium.</p>
+                    </div>
+                    <div class="announ-cards" id="cardTwo">
+                        <h5>Community Share Day</h5>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, illum.</p>
+                    </div>
+                    <div class="announ-cards" id="cardThree">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, tenetur quidem.</p>
+                    </div>
+                </div>
             </div>
             <div id="trend-title">Trending</div>
             <div id="trend-content">
-                <div class="trend-cards">box 1</div>
-                <div class="trend-cards">box 2</div>
-                <div class="trend-cards">box 3</div>
-                <div class="trend-cards">box 4</div>
+                <div class="trend-cont">
+                    <div class="trend-cards" id="cardFour">box 1</div>
+                    <div class="trend-cards" id="cardFive">box 2</div>
+                    <div class="trend-cards" id="cardSix">box 3</div>
+                    <div class="trend-cards" id="cardSeven">box 4</div>
+                </div>
             </div>
         </div>
     </div>
