trying to line up profile icons in trend cards, given up for now

--- a/index.html
+++ b/index.html
@@ -129,10 +129,28 @@
             <div id="trend-title">Trending</div>
             <div id="trend-content">
                 <div class="trend-cont">
-                    <div class="trend-cards" id="cardFour">box 1</div>
-                    <div class="trend-cards" id="cardFive">box 2</div>
-                    <div class="trend-cards" id="cardSix">box 3</div>
-                    <div class="trend-cards" id="cardSeven">box 4</div>
+                    <div class="trend-cards" id="cardFour">
+                        <div class="trend-prof"></div>
+                        <h5>@tegan</h5>
+                        <p>World Peace Builder</p>
+                    </div>
+                    <div class="trend-cards" id="cardFive">
+                        <div class="trend-prof">
+                            <img class="trend-icon" src="SVGs/cat.svg" alt="cat pic">
+                        </div>
+                        <h5>@morgan</h5>
+                        <p>Super Cool Project</p>
+                    </div>
+                    <div class="trend-cards" id="cardSix">
+                        <div class="trend-prof"></div>
+                        <h5>@kendall</h5>
+                        <p>Life Changing App</p>
+                    </div>
+                    <div class="trend-cards" id="cardSeven">
+                        <div class="trend-prof"></div>
+                        <h5>@alex</h5>
+                        <p>No Traffic Maker</p>
+                    </div>
                 </div>
             </div>
         </div>
