modified icon placements, restoring backup

--- a/index.html
+++ b/index.html
@@ -130,26 +130,40 @@
             <div id="trend-content">
                 <div class="trend-cont">
                     <div class="trend-cards" id="cardFour">
-                        <div class="trend-prof"></div>
-                        <h5>@tegan</h5>
-                        <p>World Peace Builder</p>
+                        <div class="trend-prof">
+                            <img class="trend-icon" src="SVGs/bat.svg" alt="bat pic">
+                        </div>
+                        <div class="trend-user">
+                            <h5>@tegan</h5>
+                            <p>World Peace Builder</p>
+                        </div>
                     </div>
                     <div class="trend-cards" id="cardFive">
                         <div class="trend-prof">
                             <img class="trend-icon" src="SVGs/cat.svg" alt="cat pic">
                         </div>
-                        <h5>@morgan</h5>
-                        <p>Super Cool Project</p>
+                        <div class="trend-user">
+                            <h5>@morgan</h5>
+                            <p>Super Cool Project</p>
+                        </div>
                     </div>
                     <div class="trend-cards" id="cardSix">
-                        <div class="trend-prof"></div>
-                        <h5>@kendall</h5>
-                        <p>Life Changing App</p>
+                        <div class="trend-prof">
+                            <img src="SVGs/bee.svg" alt="bee pic" class="trend-icon">
+                        </div>
+                        <div class="trend-user">
+                            <h5>@kendall</h5>
+                            <p>Life Changing App</p>
+                        </div>
                     </div>
                     <div class="trend-cards" id="cardSeven">
-                        <div class="trend-prof"></div>
-                        <h5>@alex</h5>
-                        <p>No Traffic Maker</p>
+                        <div class="trend-prof">
+                            <img src="SVGs/bone.svg" alt="bone pic" class="trend-icon">
+                        </div>
+                        <div class="trend-user">
+                            <h5>@alex</h5>
+                            <p>No Traffic Maker</p>
+                        </div>
                     </div>
                 </div>
             </div>
