changed icon colours and placements

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div id="user-icon">
                     <img class="profile-icon" id="morgan" src="SVGs/cat.svg" alt="cat pic">
                 </div>
-                <div id="greeting">Hi there,</div>
-                <div id="user-name">Morgan Oakley (@morgan)</div>
+                <h5 id="greeting">Hi there,</h5>
+                <h3 id="user-name">Morgan Oakley (@morgan)</h3>
             </div>
             <div id="user-buttons">
                 <div id="notif">
@@ -42,21 +42,21 @@
         </div>
         <div id="sidebar">
             <div id="dash-logo">
-                <img src="SVGs/view-dashboard.svg" alt="dashboard icon">
+                <img class="icon-colour" src="SVGs/view-dashboard.svg" alt="dashboard icon">
             </div>
             <div id="nav-logo">
-                <img class="icon" src="SVGs/home.svg" alt="homepage icon">
-                <img class="icon" src="SVGs/card-account-details-outline.svg" alt="profile icon">
-                <img class="icon" src="SVGs/message-reply.svg" alt="messages icon">
-                <img class="icon" src="SVGs/clock-time-three-outline.svg" alt="history icon">
-                <img class="icon" src="SVGs/note-multiple.svg" alt="tasks icon">
-                <img class="icon" src="SVGs/account-group.svg" alt="communities icon">
+                <img class="icon icon-colour" src="SVGs/home.svg" alt="homepage icon">
+                <img class="icon icon-colour" src="SVGs/card-account-details-outline.svg" alt="profile icon">
+                <img class="icon icon-colour" src="SVGs/message-reply.svg" alt="messages icon">
+                <img class="icon icon-colour" src="SVGs/clock-time-three-outline.svg" alt="history icon">
+                <img class="icon icon-colour" src="SVGs/note-multiple.svg" alt="tasks icon">
+                <img class="icon icon-colour" src="SVGs/account-group.svg" alt="communities icon">
             </div>
                 
             <div id="settings-logo">
-                <img class="icon" src="SVGs/cog.svg" alt="setting icon">
-                <img class="icon" src="SVGs/help-box.svg" alt="support icon">
-                <img class="icon" src="SVGs/shield-check.svg" alt="privacy icon">
+                <img class="icon icon-colour" src="SVGs/cog.svg" alt="setting icon">
+                <img class="icon icon-colour" src="SVGs/help-box.svg" alt="support icon">
+                <img class="icon icon-colour" src="SVGs/shield-check.svg" alt="privacy icon">
             </div>
             <div id="dashboard">
                 <h3>Dashboard</h3>
