--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="icon">
                     <img class="profile-icon" id="user-morgan" src="SVGs/cat.svg" alt="cat pic">
                 </div>
-                <div id="name">Morgan Oakley</div>
+                <h4 id="name">Morgan Oakley</h4>
                 <div id="buttons">
                     <button>New</button>
                     <button>Upload</button>
