--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="stylesheet.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -80,7 +84,9 @@
             </div>
         </div>
         <div id="main-content">
-            <div id="projects-title">Your Projects</div>
+            <div id="projects-title">
+                <h4>Your Projects</h4>
+            </div>
             <div id="projects-content">
                 <div id="content-cards">
                     <div class="cards">
@@ -109,7 +115,9 @@
                     </div>
                 </div>
             </div>
-            <div id="announ-title">Announcements</div>
+            <div id="announ-title">
+                <h4>Announcements</h4>
+            </div>
             <div id="announ-content">
                 <div class="announ-cont">
                     <div class="announ-cards" id="cardOne">
@@ -126,12 +134,14 @@
                     </div>
                 </div>
             </div>
-            <div id="trend-title">Trending</div>
+            <div id="trend-title">
+                <h4>Trending</h4>
+            </div>
             <div id="trend-content">
                 <div class="trend-cont">
                     <div class="trend-cards" id="cardFour">
                         <div class="trend-prof">
-                            <img class="trend-icon" src="SVGs/bat.svg" alt="bat pic">
+                            <img class="trend-icon" id="tTegan" src="SVGs/bat.svg" alt="bat pic">
                         </div>
                         <div class="trend-user">
                             <h5>@tegan</h5>
@@ -140,7 +150,7 @@
                     </div>
                     <div class="trend-cards" id="cardFive">
                         <div class="trend-prof">
-                            <img class="trend-icon" src="SVGs/cat.svg" alt="cat pic">
+                            <img class="trend-icon" id="tMorgan" src="SVGs/cat.svg" alt="cat pic">
                         </div>
                         <div class="trend-user">
                             <h5>@morgan</h5>
@@ -149,7 +159,7 @@
                     </div>
                     <div class="trend-cards" id="cardSix">
                         <div class="trend-prof">
-                            <img src="SVGs/bee.svg" alt="bee pic" class="trend-icon">
+                            <img src="SVGs/bee.svg" id="tKendall" alt="bee pic" class="trend-icon">
                         </div>
                         <div class="trend-user">
                             <h5>@kendall</h5>
@@ -158,7 +168,7 @@
                     </div>
                     <div class="trend-cards" id="cardSeven">
                         <div class="trend-prof">
-                            <img src="SVGs/bone.svg" alt="bone pic" class="trend-icon">
+                            <img src="SVGs/bone.svg" id="tAlex" alt="bone pic" class="trend-icon">
                         </div>
                         <div class="trend-user">
                             <h5>@alex</h5>
